--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>GINGE STINKER!!!!!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How To Control Your Mind | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Life has to be lit, not settled | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -284,9 +284,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=xF-6irwqWKo" target="_blank">
-                    <img src="https://i.ytimg.com/vi/xF-6irwqWKo/mqdefault.jpg" alt=""Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth">
+                    <img src="https://i.ytimg.com/vi/xF-6irwqWKo/mqdefault.jpg" alt="400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth">
                     <div class="video-info">
-                        <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
+                        <h3>400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>How To Control Your Mind | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Life has to be lit, not settled | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9397,9 +9397,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=xF-6irwqWKo" target="_blank">
-                        <img src="https://i.ytimg.com/vi/xF-6irwqWKo/mqdefault.jpg" alt=""Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth">
+                        <img src="https://i.ytimg.com/vi/xF-6irwqWKo/mqdefault.jpg" alt="400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth">
                         <div class="video-info">
-                            <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
+                            <h3>400 Yard Drives - No Weight Shift. Long Drive Coach Exposes the Truth</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>GINGE STINKER!!!!!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
