--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - False Identification - The Root of Doership</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>How Often Do Stocks Bounce After a Big Drop?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Williams VixFix Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>How Often Do Stocks Bounce After a Big Drop?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>Williams VixFix Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - False Identification - The Root of Doership</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
